// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Table Center a column with CSS 1`] = `
<div
  className="sc-kpOJdX evvdOO"
>
  <div
    className="sc-kpOJdX evvdOO"
  >
    <div
      className="sc-table"
      style={
        Object {
          "height": "auto",
          "overflow": "visible",
          "width": "auto",
        }
      }
    >
      <div
        className="sc-VigVT lvmqo"
      >
        <div
          aria-colcount={6}
          aria-rowcount={100}
          className="ReactVirtualized__Table"
          role="grid"
          style={Object {}}
        >
          <div
            className="ReactVirtualized__Table__headerRow sc-table-row"
            role="row"
            style={
              Object {
                "height": 40,
                "overflow": "hidden",
                "paddingRight": 0,
                "width": 0,
              }
            }
          >
            <div
              aria-label="Id"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 50px",
                  "flex": "0 1 50px",
                  "msFlex": "0 1 50px",
                }
              }
              tabIndex={0}
            >
              <div
                className="sc-jzJRlG dPOBZH"
              >
                <label>
                  Id
                </label>
                <div
                  className="sc-cSHVUG uMoDM"
                  selected={false}
                >
                  <i
                    className="fas fa-sort-up"
                  />
                  <i
                    className="fas fa-sort-down"
                  />
                </div>
              </div>
            </div>
            <div
              aria-label="First Name"
              aria-sort="ascending"
              className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 150px",
                  "flex": "0 1 150px",
                  "msFlex": "0 1 150px",
                }
              }
              tabIndex={0}
            >
              <div
                className="sc-jzJRlG dPOBZH"
              >
                <label>
                  First Name
                </label>
                <div
                  className="sc-cSHVUG eWBnEj"
                  selected={true}
                >
                  <i
                    className="fas fa-sort-up"
                  />
                  <i
                    className="fas fa-sort-down"
                  />
                </div>
              </div>
            </div>
            <div
              aria-label="Last Name"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 150px",
                  "flex": "0 1 150px",
                  "msFlex": "0 1 150px",
                }
              }
              tabIndex={0}
            >
              <div
                className="sc-jzJRlG dPOBZH"
              >
                <label>
                  Last Name
                </label>
                <div
                  className="sc-cSHVUG uMoDM"
                  selected={false}
                >
                  <i
                    className="fas fa-sort-up"
                  />
                  <i
                    className="fas fa-sort-down"
                  />
                </div>
              </div>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn sc-table-header"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "1 1 200px",
                  "flex": "1 1 200px",
                  "msFlex": "1 1 200px",
                }
              }
            >
              <div
                className="sc-jzJRlG dPOBZH"
              >
                <label>
                  Email
                </label>
              </div>
            </div>
            <div
              className="ReactVirtualized__Table__headerColumn sc-table-header"
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 150px",
                  "flex": "0 1 150px",
                  "msFlex": "0 1 150px",
                }
              }
            >
              <div
                className="sc-jzJRlG dPOBZH"
              >
                <label>
                  Ip Address
                </label>
              </div>
            </div>
            <div
              aria-label="Age"
              aria-sort="none"
              className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="columnheader"
              style={
                Object {
                  "WebkitFlex": "0 1 50px",
                  "flex": "0 1 50px",
                  "msFlex": "0 1 50px",
                }
              }
              tabIndex={0}
            >
              <div
                className="sc-jzJRlG dPOBZH"
              >
                <label>
                  Age
                </label>
                <div
                  className="sc-cSHVUG uMoDM"
                  selected={false}
                >
                  <i
                    className="fas fa-sort-up"
                  />
                  <i
                    className="fas fa-sort-down"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            aria-label="grid"
            aria-readonly={null}
            className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
            onScroll={[Function]}
            role="rowgroup"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "boxSizing": "border-box",
                "direction": "ltr",
                "height": -40,
                "overflowX": "hidden",
                "overflowY": "auto",
                "position": "relative",
                "width": 0,
                "willChange": "transform",
              }
            }
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Table Change column size 1`] = `
<div
  className="sc-kAzzGY hqerrA"
>
  <div
    className="sc-table"
    style={
      Object {
        "height": "auto",
        "overflow": "visible",
        "width": "auto",
      }
    }
  >
    <div
      className="sc-VigVT lvmqo"
    >
      <div
        aria-colcount={6}
        aria-rowcount={100}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow sc-table-row"
          role="row"
          style={
            Object {
              "height": 40,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-label="Id"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 50px",
                "flex": "0 1 50px",
                "msFlex": "0 1 50px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Id
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="First Name"
            aria-sort="ascending"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 150px",
                "flex": "0 1 150px",
                "msFlex": "0 1 150px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                First Name
              </label>
              <div
                className="sc-cSHVUG eWBnEj"
                selected={true}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="Last Name"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 150px",
                "flex": "0 1 150px",
                "msFlex": "0 1 150px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Last Name
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Email
              </label>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 150px",
                "flex": "0 1 150px",
                "msFlex": "0 1 150px",
              }
            }
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Ip Address
              </label>
            </div>
          </div>
          <div
            aria-label="Age"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 50px",
                "flex": "0 1 50px",
                "msFlex": "0 1 50px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Age
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={null}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -40,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Table Default 1`] = `
<div
  className="sc-kAzzGY hqerrA"
>
  <div
    className="sc-table"
    style={
      Object {
        "height": "auto",
        "overflow": "visible",
        "width": "auto",
      }
    }
  >
    <div
      className="sc-VigVT lvmqo"
    >
      <div
        aria-colcount={6}
        aria-rowcount={100}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow sc-table-row"
          role="row"
          style={
            Object {
              "height": 40,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-label="Id"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Id
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="First Name"
            aria-sort="ascending"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                First Name
              </label>
              <div
                className="sc-cSHVUG eWBnEj"
                selected={true}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="Last Name"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Last Name
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Email
              </label>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Ip Address
              </label>
            </div>
          </div>
          <div
            aria-label="Age"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Age
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={null}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -40,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Table Empty Table 1`] = `
<div
  className="sc-kAzzGY hqerrA"
>
  <div
    className="sc-table"
    style={
      Object {
        "height": "auto",
        "overflow": "visible",
        "width": "auto",
      }
    }
  >
    <div
      className="sc-VigVT lvmqo"
    >
      <div
        aria-colcount={6}
        aria-rowcount={0}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow sc-table-row"
          role="row"
          style={
            Object {
              "height": 40,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-label="Id"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Id
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="First Name"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                First Name
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="Last Name"
            aria-sort="descending"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Last Name
              </label>
              <div
                className="sc-cSHVUG bGmJcn"
                selected={true}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Email
              </label>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Ip Address
              </label>
            </div>
          </div>
          <div
            aria-label="Age"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Age
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={null}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -40,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Table With rowActions 1`] = `
<div
  className="sc-kAzzGY hqerrA"
>
  <div
    className="sc-table"
    style={
      Object {
        "height": "auto",
        "overflow": "visible",
        "width": "auto",
      }
    }
  >
    <div
      className="sc-VigVT lvmqo"
    >
      <div
        aria-colcount={6}
        aria-rowcount={100}
        className="ReactVirtualized__Table"
        role="grid"
        style={Object {}}
      >
        <div
          className="ReactVirtualized__Table__headerRow sc-table-row"
          role="row"
          style={
            Object {
              "height": 40,
              "overflow": "hidden",
              "paddingRight": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-label="Id"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Id
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="First Name"
            aria-sort="ascending"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                First Name
              </label>
              <div
                className="sc-cSHVUG eWBnEj"
                selected={true}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            aria-label="Last Name"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Last Name
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Email
              </label>
            </div>
          </div>
          <div
            className="ReactVirtualized__Table__headerColumn sc-table-header"
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "0 1 200px",
                "flex": "0 1 200px",
                "msFlex": "0 1 200px",
              }
            }
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Ip Address
              </label>
            </div>
          </div>
          <div
            aria-label="Age"
            aria-sort="none"
            className="ReactVirtualized__Table__headerColumn sc-table-header ReactVirtualized__Table__sortableHeaderColumn"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="columnheader"
            style={
              Object {
                "WebkitFlex": "1 1 200px",
                "flex": "1 1 200px",
                "msFlex": "1 1 200px",
              }
            }
            tabIndex={0}
          >
            <div
              className="sc-jzJRlG dPOBZH"
            >
              <label>
                Age
              </label>
              <div
                className="sc-cSHVUG uMoDM"
                selected={false}
              >
                <i
                  className="fas fa-sort-up"
                />
                <i
                  className="fas fa-sort-down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly={null}
          className="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          onScroll={[Function]}
          role="rowgroup"
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "boxSizing": "border-box",
              "direction": "ltr",
              "height": -40,
              "overflowX": "hidden",
              "overflowY": "auto",
              "position": "relative",
              "width": 0,
              "willChange": "transform",
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;
